# file-sniffer

./: .gitignore  README.md  environment.yml  meu_relatorio.md  my_test.yaml  pyproject.toml
.github/workflows/: test.yml
fsniff/: cli.py  factory.py  utils.py
fsniff/handlers/: base.py  csv.py  text.py  zip.py
grimsniffer/: __init__.py  cli.py  core.py  handlers.py
samples/: data.csv
tests/: conftest.py  test_cli.py  test_fsniff.py  test_handlers.py
